Updates to install.md for latest code, IDEA and related settings.